--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ log = "0.4.20"
 once_cell = "1.19.0"
 rand = "0.8.5"
 ratatui = "0.26.0"
-russh = { git = "https://github.com/warp-tech/russh" }
-russh-keys = { git = "https://github.com/warp-tech/russh" }
+russh = "0.43.0"
+russh-keys = "0.43.0"
 serde = "1.0.196"
 serde_json = "1.0.113"
 tokio = "1.36.0"
